--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.1.0",
+    "abcjs": "^6.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
