--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.8.6",
     "@tauri-apps/api": "^1.1.0",
     "abcjs": "^6.1.6",
+    "framer-motion": "^7.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "tauri-plugin-sql-api": "github:tauri-apps/tauri-plugin-sql",
     "vexflow": "^4.0.3",
     "vextab": "^3.0.6"
