--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.58.3",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
-    "vite": "^3.0.2"
+    "vite": "^3.0.2",
+    "vite-plugin-html": "^3.2.0"
   }
 }
