--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -16,6 +17,9 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
+  // "exclude": [
+  //   "src/lib/aiharmony",
+  // ],
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
