--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^23.0.2",
     "@tauri-apps/cli": "^1.1.0",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.12",
+    "jest": "^29.7.0",
     "postcss": "^8.4.18",
     "sass": "^1.58.3",
     "tailwindcss": "^3.1.8",
+    "ts-jest": "^29.1.1",
     "typescript": "^4.6.4",
     "vite": "^3.0.2",
     "vite-plugin-html": "^3.2.0"
